--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+
     <title>Git Collaboration Practice</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <h1>Welcome to Git Collaboration Practice</h1>
     <p>This is a simple HTML file to practice Git collaboration.</p>
-    <p>Feel free to make changes and commit them to see how collaboration works!</p>
+    <p>
+      Feel free to make changes and commit them to see how collaboration works!
+    </p>
     <ul>
-        <li>Clone the repository</li>
-        <li>Create a new branch</li>
-        <li>Make changes to this file</li>
-        <li>Commit and push your changes</li>
-        <li>Create a pull request</li>
+      <li>Clone the repository</li>
+      <li>Create a new branch</li>
+      <li>Make changes to this file</li>
+      <li>Commit and push your changes</li>
+      <li>Create a pull request</li>
     </ul>
     <p>Happy coding!</p>
-    
-</body>
+  </body>
 </html>
