--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Git Collaboration Practice</title>
   </head>
   <body>
+
+    <nav class="nav">
+      <ul>
+        <li><a href="#home"><span>🏠</span> Home</a></li>
+        <li><a href="#about"><span>ℹ️</span> About</a></li>
+        <li><a href="#contact"><span>✉️</span> Contact</a></li>
+      </ul>
+    </nav>
+
     <h1>Welcome to Git Collaboration Practice</h1>
     <p>This is a simple HTML file to practice Git collaboration.</p>
     <p>
