feat(footer): add footer and update nav links layout

--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <title>Git Collaboration Practice</title>
   </head>
   <body>
-
     <nav class="nav">
       <ul>
-        <li><a href="#home"><span>🏠</span> Home</a></li>
-        <li><a href="#about"><span>ℹ️</span> About</a></li>
-        <li><a href="#contact"><span>✉️</span> Contact</a></li>
+        <li>
+          <a href="#home"><span>🏠</span> Home</a>
+        </li>
+        <li>
+          <a href="#about"><span>ℹ️</span> About</a>
+        </li>
+        <li>
+          <a href="#contact"><span>✉️</span> Contact</a>
+        </li>
       </ul>
     </nav>
 
@@ -30,5 +35,13 @@
       <li>Create a pull request</li>
     </ul>
     <p>Happy coding!</p>
+
+    <footer class="footer">
+      <p>© 2025 Git Collaboration Practice.</p>
+      <ul>
+        <li><a href="#privacy">Privacy</a></li>
+        <li><a href="#terms">Terms</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
